finish cmake config

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 3.10)
 
-project(PacMan VERSION 0.1.0)
+set(PROJECT_NAME PacMan)
+project(${PROJECT_NAME} VERSION 0.1.0)
 
 set(CMAKE_CXX_STANDARD 11)
 
@@ -15,4 +16,5 @@ file (GLOB SOURCE_FILES
     "${PROJECT_SOURCE_DIR}/src/*.cpp"
 )
 
-add_executable(PacMan ${SOURCE_FILES})
+add_executable(${PROJECT_NAME} ${SOURCE_FILES})
+target_link_libraries(${PROJECT_NAME} sfml-system sfml-window sfml-graphics)
